--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
+    env_file:
+      - ./variaveis.env
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -35,6 +37,8 @@ services:
       - "8081:80"
     depends_on:
       - mysql
+    env_file:
+      - ./variaveis.env
 
 volumes:
   mysql_data:
