--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
     env_file:
-      - ./variaveis.env
+      - ./source.env
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -38,7 +38,7 @@ services:
     depends_on:
       - mysql
     env_file:
-      - ./variaveis.env
+      - ./source.env
 
 volumes:
   mysql_data:
